# riscv-v-lite

./: README.md  test.py  test.sh
programs/: .gitignore  CMakeLists.txt  Makefile  TC-gcc-rv32imv.cmake  TC-gcc-rv32iv.cmake  TC-gcc-rv64imv.cmake  TC-llvm-13-rv32imv.cmake  TC-llvm-13-rv32iv.cmake  TC-llvm-13-rv64imv.cmake  TC-llvm-13-rv64imvxcheri-int.cmake  TC-llvm-13-rv64imvxcheri.cmake  TC-llvm-13-rv64imxcheri-int.cmake  TC-llvm-13-rv64imxcheri.cmake  TC-llvm-13-rv64iv.cmake  TC-llvm-13-rv64ixcheri.cmake  TC-llvm-13-rv64ixclang.cmake  TC-llvm-trunk-rv32imv.cmake  TC-llvm-trunk-rv32iv.cmake  TC-llvm-trunk-rv64imv.cmake  cheri_link.ld  instrs.txt  instrs_uniq.txt  link.ld
programs/cheri_hello_world/: CMakeLists.txt  hello_world.c  init.s
programs/hello_world/: CMakeLists.txt  hello_world.c  test_list.json
programs/src/: init.s  vector_memcpy.c
programs/vector_memcpy/: CMakeLists.txt  link.ld  test_list.json  test_list.txt  test_vector_memcpy.c  test_vector_memcpy.cpp  test_vector_memcpy_intr.cpp  vec_wrappers.h  vec_wrappers.hpp  vector_gen.py  vector_intrinsic_gen.py  vector_memcpy.c  vector_memcpy.cpp
programs/vector_memcpy_old/: CMakeLists.txt  test_list.json  vec_wrappers.h  vector_memcpy_old.c
programs/vector_memcpy_pointers/: CMakeLists.txt  test_list.json  vector_memcpy_pointers.cpp
rsim/: Cargo.toml  test.sh
rsim/src/: bitpattern.rs  decode.rs  instrs.rs  lib.rs  main.rs  memory.rs  processor.rs
rsim/src/processor/: decode.rs  elements.rs  exceptions.rs  isa_mods.rs  memory.rs  mod.rs  models.rs  utils.rs  vector.rs
rsim/src/processor/elements/: cheri.rs  memory.rs  registers.rs
rsim/src/processor/elements/cheri/: capability.rs  memory.rs  registers.rs
rsim/src/processor/isa_mods/: cheri.rs  csrs.rs  rv32i.rs  rv32im.rs  rv64i.rs  rv64im.rs  vector.rs  vector32.rs
rsim/src/processor/isa_mods/vector/: conns.rs  conns_old.rs  decode.rs  registers.rs  types.rs
rsim/src/processor/models/: rv32imv.rs  rv32iv.rs  rv64i.rs  rv64im.rs  rv64imv.rs  rv64imvxcheri.rs  rv64imxcheri.rs  rv64ixcheri.rs
test_results/: 20220516-181736.tsv  20220516-182007.tsv  20220516-182050.tsv  20220517-005830.tsv  20220517-005855.tsv  20220517-010036.tsv  20220517-011243.tsv  20220517-124205.tsv  20220518-161751.tsv
