[package]
name = "rsim"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
# bitlab = "1.1.0"
bitutils = "3.0.1"
anyhow = "1.0.51"
thiserror = "1.0"
static_assertions = "1.1.0"
rust-cheri-compressed-cap = { git = "https://github.com/theturboturnip/cheri-compressed-cap" }
either = "1.6.1"